NetworkCache uses URL instead of URI as a part of caching key https://bugs.webkit.org/show_bug.cgi?id=244000

Reviewed by Alex Christensen.

Per [1], the key is composed of, at a minimum, the request method and target URI.
But in NetworkCache, Cache::makeCacheKey uses URL as a part of key instead. This patch
uses url().stringWithoutFragmentIdentifier() instead of url() as a part of the key.

[1] https://httpwg.org/specs/rfc9111.html#caching.overview

* LayoutTests/http/tests/cache/disk-cache/disk-cache-fragments-expected.txt: Added.
* LayoutTests/http/tests/cache/disk-cache/disk-cache-fragments.html: Added.
* LayoutTests/http/tests/cache/disk-cache/resources/cache-test.js:
(requireFragment):
(addFragmentToURL):
(loadResource):
* LayoutTests/http/tests/inspector/network/local-resource-override-basic-expected.txt:
* Source/WebKit/NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::makeCacheKey):
(WebKit::NetworkCache::Cache::retrieve):
(WebKit::NetworkCache::Cache::store):

Canonical link: https://commits.webkit.org/253567@main